<resources>
    <string name="app_name">智能手写板</string>

    <!-- 日期 -->
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>

    <!-- NetWork -->
    <string name="prompt_network_offline">请检查网络连接</string>

    <!-- 刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载</string>
    <string name="pull_to_refresh_release_label">放开以刷新</string>
    <string name="pull_to_refresh_refreshing_label1">正在载入</string>
    <string name="pull_to_refresh_refreshing_label2">正在载入.</string>
    <string name="pull_to_refresh_refreshing_label3">正在载入..</string>
    <string name="pull_to_refresh_refreshing_label4">正在载入...</string>
    <string name="loosen_refresh">松开刷新</string>
    <string name="load_more">加载更多</string>
    <string name="no_more">没有更多啦!</string>

    <!-- 微信分享 -->
    <string name="prompt_share_success">分享成功</string>
    <string name="prompt_share_failed">分享失敗</string>
    <string name="prompt_share_cancel">已取消分享</string>
    <string name="share">分享</string>
    <string name="share_to">分享至</string>
    <string name="share_to_wechat_friends">微信好友</string>
    <string name="share_to_circle_friends">朋友圈</string>
    <string name="saved_to_album">已保存至相册</string>
    <string name="install_wechat_prompt">请先安装微信应用</string>
    <string name="update_wechat_prompt">请先更新微信应用</string>

    <!-- 权限管理 -->
    <string name="permission_granted">权限已接收</string>
    <string name="permission_denied">权限被拒绝，您可以在权限管理中打开该权限</string>

    <!-- LoginActivity -->
    <string name="login_by_password">账户密码登录</string>
    <string name="login_by_auth">短信验证码登录</string>
    <string name="region">国家/地区</string>
    <string name="mobile_phone">手机号</string>
    <string name="mobile_phone_format_wrong">手机号码格式不正确</string>
    <string name="auth_code">验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="retrieve_password">找回密码</string>
    <string name="hint_input_mobile_phone">请输入手机号码</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_auth">请输入验证码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="prompt_account_wrong">号码输入不正确，请重新输入</string>
    <string name="prompt_phone_not_empty">手机号码不能为空</string>
    <string name="prompt_password_not_empty">密码不能为空</string>

    <!-- MainActivity -->
    <string name="press_exit_again">再按一次退出</string>
    <string name="tab_home">首页</string>
    <string name="tab_found">发现</string>
    <string name="tab_message">消息</string>
    <string name="tab_mine">我的</string>
    <string name="check_connected_device">请检查设备是否已连接</string>

    <!-- RegisterActivity -->
    <string name="register_follow_agreement">同意协议并注册</string>
    <string name="register_quickly">快速注册</string>
    <string name="format_auth_code_regain">%ds后重新获取</string>

    <!-- MainFragment -->
    <string name="main_page">首页</string>

    <!-- MineFragment -->
    <string name="prompt_not_login">更多好玩功能，登录后解锁哦~</string>
    <string name="setting_for_app">APP设置</string>

    <!-- SettingActivity -->
    <string name="logout">退出登录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_logout_message">退出登录后，将无法查看更多好玩功能(您可以随时再次登录)，确定要退出吗?</string>

    <!-- CanvasActivity -->
    <string name="player">播放</string>
    <string name="detail">详情</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="canvas">画笔</string>
    <string name="eraser">橡皮</string>
    <string name="palete">色板</string>
    <string name="clear">清空</string>
    <string name="work_playback">创作回放</string>
    <string name="play_rate">%sx</string>
    <string name="device_disconnected">设备已断开连接</string>

    <!-- BoardDetailFragment -->
    <string name="work_info">作品信息</string>
    <string name="author">作者</string>
    <string name="create_time">创建时间</string>
    <string name="edit_time">修改时间</string>
    <string name="prompt_output_path">保存成功，路径为：%s</string>

    <!-- BoardEditorFragment -->
    <string name="toast_save_to_gallery_successed">已保存至相册</string>

    <!-- DeleteDialog -->
    <string name="delete_dialog_title">删除当前页面</string>
    <string name="delete_dialog_message">删除后无法恢复</string>
    <string name="prompt">提示</string>
    <string name="message_edit_exit">有未保存修改，是否保存？</string>
    <string name="message_save_image">图片将保存至本地相册，您可以查看相册并分享</string>

    <!-- Error Message -->
    <string name="illegal_instruction">指令ID非法，HOST发送的cmd_id不在预设指令列表中</string>
    <string name="check_code_failed">校验和失败</string>
    <string name="length_instruction">指令Payload长度非法，长度与协议定义不一致</string>
    <string name="device_busy_status">系统忙状态，当前设备状态无法执行目标指令</string>
    <string name="index_instruction">笔记索引值错误</string>
    <string name="coordinate_index_instruction">请求坐标索引值错误</string>

</resources>