<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_spinner">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dip45"
        android:text="@string/delete_dialog_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dip20"
        android:paddingLeft="@dimen/dip10"
        android:paddingRight="@dimen/dip10"
        android:text="@string/delete_dialog_message"
        android:textAlignment="center"
        android:textColor="@color/black_90_transparent"
        android:textSize="@dimen/font14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View style="@style/divide_line_my_fragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip48"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="@dimen/dip0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font16" />

            <View style="@style/divide_line_vertical" />

            <TextView
                android:id="@+id/confirm_btn"
                android:layout_width="@dimen/dip0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font16" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>