<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/board_editor_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar_general" />

    <!-- 非自绘区 -->
    <LinearLayout
        android:id="@+id/not_auto_draw_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <com.aphrodite.smartboard.view.widget.view.CustomDrawView
            android:id="@+id/custom_canvas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip0"
            android:layout_weight="1"
            android:background="@android:color/white" />

        <include layout="@layout/layout_divide_view" />

        <LinearLayout
            android:id="@+id/canvas_bottom_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip45"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/switch_paint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/canvas"
                android:textColor="@color/color_626262" />

            <TextView
                android:id="@+id/switch_eraser"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eraser"
                android:textColor="@color/color_626262" />

            <TextView
                android:id="@+id/switch_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/palete"
                android:textColor="@color/color_626262" />

            <TextView
                android:id="@+id/switch_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/color_626262" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>