<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_spinner">

    <ImageView
        android:id="@+id/dialog_close_iv"
        android:layout_width="@dimen/dip14"
        android:layout_height="@dimen/dip14"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/dip20"
        android:layout_marginTop="@dimen/dip16"
        android:layout_marginRight="@dimen/dip16"
        android:background="@drawable/dialog_close_icon" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dip40"
        android:text="@string/share"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:layout_marginTop="@dimen/dip40"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wechat_friends_btn"
            android:layout_width="@dimen/dip0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/wechat_friends"
            android:drawablePadding="@dimen/dip10"
            android:gravity="center_horizontal"
            android:text="@string/share_to_wechat_friends"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font12" />

        <TextView
            android:id="@+id/wechat_moments_btn"
            android:layout_width="@dimen/dip0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/wechat_friend_circle"
            android:drawablePadding="@dimen/dip10"
            android:gravity="center_horizontal"
            android:text="@string/share_to_circle_friends"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font12" />

    </LinearLayout>

</RelativeLayout>