<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mine_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/not_login_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/not_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip0"
            android:text="@string/prompt_not_login" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dip40"
            android:layout_marginTop="@dimen/dip10"
            android:background="@drawable/login_button_selector"
            android:text="@string/login"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/logined_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip30"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/account_info_ll"
                android:layout_width="match_parent"
                android:layout_height="90.7dp"
                android:background="@drawable/common_click_bg"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dip23"
                android:paddingRight="18.7dp">

                <ImageView
                    android:id="@+id/my_head"
                    android:layout_width="@dimen/dip54"
                    android:layout_height="@dimen/dip54"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/small_default_head" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dip15"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/my_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_f2000000"
                        android:textSize="@dimen/font16" />

                    <TextView
                        android:id="@+id/my_user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dip2"
                        android:textColor="@color/color_80000000"
                        android:textSize="@dimen/font14" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/baby_info_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout_divide_view" />

                <TextView
                    style="@style/select_item_view"
                    android:drawableLeft="@drawable/setting"
                    android:drawableRight="@drawable/arrow_right"
                    android:drawablePadding="@dimen/dip12"
                    android:text="我的草稿"
                    android:textColor="@color/color_e6000000"
                    android:textSize="@dimen/font13" />

            </LinearLayout>

            <include layout="@layout/layout_divide_view" />

            <TextView
                android:id="@+id/mine_setting"
                style="@style/select_item_view"
                android:drawableLeft="@drawable/setting"
                android:drawableRight="@drawable/arrow_right"
                android:drawablePadding="@dimen/dip12"
                android:text="@string/setting_for_app"
                android:textColor="@color/color_e6000000"
                android:textSize="@dimen/font13" />

            <View style="@style/divide_line_my_fragment" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>










